# GEVAI

./: .gitignore  README.md  benchmark.csv  black_box_parameters.yaml  pyproject.toml  requirements.txt  run.py
DATASETS/: Sources.md  wine-quality.csv
examples/: RunExperiment.py  black_box_pipeline.py
python/src/GEVAI/: __init__.py  utils.py
python/src/GEVAI/adhoc/: DecisionTree.py  MLPNAS.py  RipperK.py  RipperKWrapper.py  __init__.py  generic_algorithm.py
python/src/GEVAI/adhoc/mlpnas/: README.md  controller.py  mlp_generator.py  mlpnas.py  utils.py
python/src/GEVAI/apriori/: __init__.py  loading.py
python/src/GEVAI/benchmarking/: __init__.py  aggregate_metrics.py  plot_results.py
python/src/GEVAI/expost/: ExPost.py  KerasEquations.py  KerasLime.py  KerasShapely.py  KerasShapley.py  Metrics.py  WhiteBoxExplainer.py  __init__.py
