[tool.poetry]
name = "GEVAI"
version = "0.0.1"
description = "Non-cohesive framework for General Explainable and Verifiable Artificial Intelligence."
authors = ["Oliver R. Fox <o.fox3@newcastle.ac.uk>", "Giacomo Bergami <Giacomo.Bergami@newcastle.ac.uk"]
readme = "README.md"
packages = [{include = "*", from="python/src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
pyyaml = "*"
keras = "*"
matplotlib = "*"
tensorflow = { version = "==2.17.1", extras = ["and-cuda"] }
nvidia-tensorrt = "*"
shap = "*"
torch = "*"
keras-visualizer = "*"
simpy = "*"
dtcontrol = "*"
expecttest = "*"
lime = "*"
alibi = "*"
wittgenstein = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
